# community-search-thesis

./: .gitignore  CMakeLists.txt  README.md  convert_tsv.py  main.cpp
google_test/: CMakeLists.txt  adj_list_test.cpp  temporal_community_search_big_test.cpp  temporal_community_search_test.cpp
google_test/UnitTestInputs/: PaperInput  PaperInputReverse  input1  updateInput
google_test/lib/googletest/cmake/: internal_utils.cmake
include/adj_list/: CMakeLists.txt  adj_list.cpp  adj_list.h
include/dynamic-connectivity-hdt/: .gitignore  CMakeLists.txt
include/dynamic-connectivity-hdt/src/dynamic_graph/: CMakeLists.txt
include/dynamic-connectivity-hdt/src/dynamic_graph/include/dynamic_graph/: dynamic_connectivity.hpp
include/dynamic-connectivity-hdt/src/dynamic_graph/src/: dynamic_connectivity.cpp  dynamic_forest.cpp  dynamic_forest.hpp
include/temporal_community_search/: CMakeLists.txt  temporal_community_search.cpp  temporal_community_search.h
